@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-07-02T00:59:23Z",
-  "count_outdated" : 258,
-  "uniques_outdated" : 191,
-  "count" : 259,
-  "uniques" : 192,
+  "timestamp" : "2025-08-05T01:04:55Z",
+  "count_outdated" : 259,
+  "uniques_outdated" : 192,
+  "count" : 260,
+  "uniques" : 193,
   "clones" : [
     {
-      "timestamp": "2025-07-01T00:00:00Z",
+      "timestamp": "2025-08-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
