@@ -1,3 +1,12 @@
+2025-08-05T01:04:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16737865531 # 726
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 191 258 / 192 259
+* notice: next accum: outdated-unq outdated-all / unq all: 192 259 / 193 260
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-07-01] / [2025-08-04]
+
 2025-07-02T00:59:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16013560771 # 692
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-02
